[project]
name = "fastbook"
version = "0.1.0"
description = "Install with uv sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-search-imagesearch>=2.0.1",
    "fastai>=2.0.0",
    "fastbook>=0.0.28",
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbdev>=0.2.12",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
